--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,19 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+
+    <div  class="navbar">
+      <header>
+        <div class="container" >
+          <h1 class="logo">Disaste&#x1D19; I n f o </h1>
+          <ul>
+            <li><a href="https://www.google.com/" > Home&nbsp&nbsp </a></li>
+            <li><a href="#" target="_blank"> Contact&nbsp&nbsp  </a></li>
+            <li><a href="#" > About Us&nbsp&nbsp </a></li>
+          </ul>
+        </div>
+      </header>
+    </div>
   </head>
 
   <body>
