--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,11 @@
 <h1>Post Content</h1>
-
-
+<% if @post.errors.any? %>
+  <ul>
+    <% @post.errors.each do |error| %>
+      <li><%= error.full_message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <%= form_with model: @post do |form| %>
   <div>
     <%= form.label :title %>
