--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,6 +15,11 @@
       <td><%= post.content %></td>
       <td><%= post.address %></td>
       <td><%= post.user.email %></td>
+      <td>
+        <%= link_to 'Show', posts_path(post) %>
+        <%= link_to 'Edit', edit_post_path(post)_ %>
+
+      </td>
     </tr>
   <% end %>
 </table>
