--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,7 +17,8 @@
       <td><%= post.user.email %></td>
       <td>
         <%= link_to 'Show', posts_path(post) %>
-        <%= link_to 'Edit', edit_post_path(post)_ %>
+        <%= link_to 'Edit', edit_post_path(post) %>
+        <%= link_to 'Delete', posts_path(post) %>
 
       </td>
     </tr>
