add navbar design

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,20 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 
-    <div  class="navbar">
+
       <header>
-        <div class="container" >
-          <h1 class="logo">Disaste&#x1D19; I n f o </h1>
-          <ul>
-            <li><a href="https://www.google.com/" > Home&nbsp&nbsp </a></li>
-            <li><a href="#" target="_blank"> Contact&nbsp&nbsp  </a></li>
-            <li><a href="#" > About Us&nbsp&nbsp </a></li>
-          </ul>
-        </div>
+        <nav class="navbar navbar-light bg-light ">
+          <div class="container-fluid">
+            <a class="navbar-brand">Disaste&#x1D19; Info</a>
+            <ul class="nav">
+              <li class="nav-item"><a href="https://www.google.com/" > Home&nbsp&nbsp </a></li>
+              <li class="nav-item"><a href="#" target="_blank"> Contact&nbsp&nbsp  </a></li>
+              <li class="nav-item"><a href="../home/about" > About Us&nbsp&nbsp </a></li>
+            </ul>
+          </div>
+        </nav>
       </header>
-    </div>
+
   </head>
 
   <body>
