--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,6 +19,7 @@
         <%= link_to 'Show', post_path(post) %>
         <%= link_to 'Edit', edit_post_path(post) %>
         <%= link_to 'comments', post_comments_path(post) %>
+        <%= link_to 'new comment', new_post_comment_path(post) %>
         <%= button_to 'Delete', post_path(post), method: :delete %>
 
       </td>
