--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,8 +1,10 @@
-<h1>Title <%= @post.title %></h1>
+<h1>Title: <%= @post.title %></h1>
 <h2>Comments</h2>
 <ul>
   <% @comments.each do |comment| %>
     <li><%= comment.content %>(<%= comment.created_at %>)</li>
+    <%= link_to 'edit', edit_post_comment_path(@post, comment) %>
+    <%= button_to 'delete', post_comment_path(@post, comment), method: :delete %>
   <% end %>
 </ul>
 
