add some refactor

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Edit Post id: <%= @post.id %></h1>
 <%= render partial: 'form', locals: { post: @post } %>
 
-<%=  link_to 'Index', posts_path %>
+<%=  link_to 'Disaster Information List', posts_path %>
