--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,4 +5,4 @@
   <li><%= @post.address %></li>
 </ul>
 
-<%=  link_to 'Index', posts_path %>
+<%=  link_to 'Disaster Information List', posts_path %>
