--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,3 +1,5 @@
 <h1>Title: <% @post.title %></h1>
 
 <%= render partial: 'form', locals: {post: @post, comment: @comment, path: post_comments_path(@post)} %>
+
+<%=  link_to 'Disaster Information List', posts_path %>
