--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -1,4 +1,4 @@
-<h1>Post Content</h1>
+<h1>New Disaster Information</h1>
 <% if @post.errors.any? %>
   <ul>
     <% @post.errors.each do |error| %>
@@ -22,4 +22,4 @@
   <%= form.submit %>
 <% end %>
 
-<%=  link_to 'Index', posts_path %>
+<%=  link_to 'Disaster Information List', posts_path %>
