--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,3 +1,5 @@
 <h1>Title: <%= @post.title %></h1>
 <h2>edit comment id: <%= @comment.id %></h2>
 <%= render partial: 'form', locals: {post: @post, comment: @comment,  path: post_comment_path(@post, @comment)} %>
+
+<%= link_to 'Disaster Information List' ,posts_path %>
