--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -5,6 +5,7 @@
     <li><%= comment.content %>(<%= comment.created_at %>)</li>
     <%= link_to 'edit', edit_post_comment_path(@post, comment) %>
     <%= button_to 'delete', post_comment_path(@post, comment), method: :delete %>
+    <%= button_to 'delete', post_comment_path(@post, comment), method: :delete, class: "btn btn-danger" if @post.user == current_user %>
   <% end %>
 </ul>
 
