--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,2 +1,4 @@
 <h1>New category</h1>
 <%= render partial: 'form', locals: { category: @category, path: categories_path } %>
+
+<%= link_to 'Category', categories_path %>
