--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,12 +1,22 @@
+<div>
 <h1>Title: <%= @post.title %></h1>
-<h2>Comments</h2>
-<ul>
-  <% @comments.each do |comment| %>
-    <li><%= comment.content %>(<%= comment.created_at %>)</li>
-    <%= link_to 'edit', edit_post_comment_path(@post, comment) %>
-    <%= button_to 'delete', post_comment_path(@post, comment), method: :delete %>
-    <%= button_to 'delete', post_comment_path(@post, comment), method: :delete, class: "btn btn-danger" if @post.user == current_user %>
-  <% end %>
-</ul>
-
-<%= link_to 'Post List' ,posts_path %>
+</div>
+<div class="container">
+  <div class="card">
+    <div class="card-header">
+      <h3>Comments</h3>
+    </div>
+    <div class="card-body">
+      <ul class="card-text ">
+        <% @comments.each do |comment| %>
+          <%= comment.content %>(<%= comment.created_at %>)
+          <div>
+          <%= link_to 'edit', edit_post_comment_path(@post, comment), class: "btn btn-secondary" if @post.user == current_user %>
+          <%= button_to 'delete', post_comment_path(@post, comment), method: :delete, class: "btn btn-danger" if @post.user == current_user %>
+          </div>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
+<%= link_to 'Back' ,posts_path, class: "btn btn-primary" %>
