--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render partial: 'form', locals: {post: @post, comment: @comment, path: post_comments_path(@post)} %>
 
-<%=  link_to 'Disaster Information List', posts_path %>
+<%=  link_to 'Back', posts_path, class: "btn btn-primary" %>
