--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,13 @@
         <nav class="navbar navbar-light bg-light ">
           <div class="container-fluid">
             <a class="navbar-brand">Disaste&#x1D19; Info</a>
-            <ul class="nav">
-              <li class="nav-item"><a href="https://www.google.com/" > Home&nbsp&nbsp </a></li>
-              <li class="nav-item"><a href="#" target="_blank"> Contact&nbsp&nbsp  </a></li>
-              <li class="nav-item"><a href="../home/about" > About Us&nbsp&nbsp </a></li>
+            <ul class="nav nav-pills">
+              <li class="nav-item"><%= link_to "Home", root_path %></li>
+              <br>
+              <li class="nav-item">
+                <%= link_to "Login", new_user_session_path unless user_signed_in? %>
+                <%= button_to "Log Out", destroy_user_session_path, method: :delete if user_signed_in?%>
+             </li>
             </ul>
           </div>
         </nav>
@@ -25,9 +28,14 @@
 
   </head>
 
+
+
+
   <body>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
+
+
     <%= yield %>
   </body>
 </html>
