--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,25 +1,32 @@
-<% if @post.errors.any? %>
-  <ul>
-    <% @post.errors.each do |error| %>
-      <li><%= error.full_message %></li>
+
+<div class="container">
+  <div class="form-control">
+    <% if @post.errors.any? %>
+      <ul>
+        <% @post.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
     <% end %>
-  </ul>
-<% end %>
 <%= form_with model: @post do |form| %>
-  <div>
+  <div class="mb-2">
+    <%= form.collection_check_boxes :category_ids, Category.all, :id, :name %>
+    <%= link_to "Category", new_category_path, class: "btn btn-info" %>
+  </div>
+  <div class="mb-2">
     <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
-  <div>
+  <div class="mb-2">
     <%= form.label :content %>
     <%= form.text_area :content %>
   </div>
-  <div>
+  <div class="mb-3">
     <%= form.label :address %>
-    <%= form.text_field :address %>
+    <%= form.text_field :address%>
   </div>
-  <div>
-    <%= form.collection_check_boxes :category_ids, Category.all, :id, :name %>
-  </div>
+
   <%= form.submit %>
 <% end %>
+  </div>
+</div>
