--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,32 +1,51 @@
-<h1>Post List</h1>
-<table class="table">
-  <thead>
-  <td>id</td>
-  <td>title</td>
-  <td>content</td>
-  <td>user</td>
-  <td>address</td>
-  <td>Category</td>
-  <td>action</td>
-  </thead>
-  <% @posts.each do |post| %>
-    <tr>
-      <td><%= post.id %></td>
-      <td><%= post.categories.pluck(:name).join(',') %></td>
-      <td><%= post.title %></td>
-      <td><%= post.content %></td>
-      <td><%= post.address %></td>
-      <td><%= post.user.email %></td>
-      <td>
-        <%= link_to 'Show', post_path(post) %>
-        <%= link_to 'Edit', edit_post_path(post) %>
-        <%= link_to 'comments', post_comments_path(post) %>
-        <%= link_to 'new comment', new_post_comment_path(post) %>
-        <%= button_to 'Delete', post_path(post), method: :delete %>
+<div class="container ">
+<h1>Disaster Information</h1>
+</div>
+<div class="container">
 
-      </td>
-    </tr>
-  <% end %>
-</table>
+<%= link_to "Post", new_post_path, class: "btn btn-primary" %>
+
+
+</div>
+<div class="container">
+  <table class="table table-bordered table-info table-striped">
+    <thead>
+    <th>Hot</th>
+    <th>Id</th>
+    <th>Category</th>
+    <th>Title</th>
+    <th>Content</th>
+    <th>Address</th>
+    <th>E-mail</th>
+    <th>Comment</th>
+    <th colspan="4">Action</th>
+    <th>Delete</th>
+    </thead>
+
+
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= "hot" if @hot_posts == post.id %><%= image_tag ('hot-2.png'), width: "90", height: "70" if @hot_posts.include?(post)%></td>
+        <td><%= post.id %></td>
+        <td><%= post.categories.pluck(:name).join(',') %></td>
+        <td><%= post.title %></td>
+        <td><%= post.content %></td>
+        <td><%= post.address %></td>
+        <td><%= post.user.email %></td>
+        <td><%= post.comments_count %></td>
+
+
+
+        <td><%= link_to 'Show', post_path(post),  class: "btn btn-secondary" %></td>
+        <td><%= link_to 'Edit', edit_post_path(post), class: "btn btn-secondary" if post.user == current_user %></td>
+        <td><%= link_to 'Comment', post_comments_path(post),  class: "btn btn-secondary" %></td>
+        <td><%= link_to 'New comment', new_post_comment_path(post),  class: "btn btn-secondary" %></td>
+        <td><%= button_to 'Delete', post_path(post), method: :delete,  class: "btn btn-danger" if post.user == current_user %></td>
+
+      </tr>
+    <% end %>
+  </table>
 
 <%= link_to 'Create New Disaster Information', new_post_path %>
+
+</div>
