--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,22 @@
-<h1>show post id: <%= @post.id %></h1>
-<ul>
-  <li><%= @post.title %></li>
-  <li><%= @post.content %></li>
-  <li><%= @post.address %></li>
-</ul>
+<h1>User id: <%= @post.user.email %></h1>
 
-<%=  link_to 'Disaster Information List', posts_path %>
+<div class="container">
+  <div class="card">
+    <div class="card-header">
+      <h3>Categories: <%= @post.categories.pluck(:name).join(',')  %></h3>
+    </div>
+    <div class="card-body">
+    <ul>
+      <h4>Title: <%= @post.title %></li></h4>
+      <p>Content: <%= @post.content %></li></p>
+      <p>Address: <%= @post.address %></li></p>
+
+    </ul>
+      <%= link_to 'New comment', new_post_comment_path(@post),  class: "btn btn-secondary" %>
+
+    </div>
+  </div>
+</div>
+
+
+<%=  link_to 'Back', root_path, class: "btn btn-info" %>
