--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,8 +10,8 @@
 <div class="container">
   <table class="table table-bordered table-info table-striped">
     <thead>
-    <th>Hot</th>
-    <th>Id</th>
+
+    <th colspan="2">Id</th>
     <th>Category</th>
     <th>Title</th>
     <th>Content</th>
