--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,8 +10,8 @@
     <% end %>
 <%= form_with model: @post do |form| %>
   <div class="mb-2">
-    <%= form.collection_check_boxes :category_ids, Category.all, :id, :name %>
-    <%= link_to "Category", new_category_path, class: "btn btn-info" %>
+    <%= form.label :category, style: "display: block" %>
+    <%= form.select :category_ids, options_for_select(@categories.collect {|cat| [cat.name, cat.id]})  %>
   </div>
   <div class="mb-2">
     <%= form.label :title %>
