--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,7 +11,7 @@
 <%= form_with model: @post do |form| %>
   <div class="mb-2">
     <%= form.label :category, style: "display: block" %>
-    <%= form.select :category_ids, options_for_select(@categories.collect {|cat| [cat.name, cat.id]})  %>
+    <%= form.collection_check_boxes :category_ids, Category.all, :id, :name %>
   </div>
   <div class="mb-2">
     <%= form.label :title %>
