--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<h1>User id: <%= @post.user.email %></h1>
+<h1>User E-mail: <%= @post.user.email %></h1>
 
 <div class="container">
   <div class="card">
