--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,8 +12,10 @@
     <th>Address</th>
     <th>E-mail</th>
     <th>Comment</th>
+    <th>Ip_address</th>
     <th colspan="3">Action</th>
     <th>Delete</th>
+
     </thead>
     <% @posts.each do |post| %>
       <tr>
@@ -25,10 +27,10 @@
         <td><%= post.address %></td>
         <td><%= post.user.email %></td>
         <td><%= post.comments_count %></td>
+        <td><%= Geocoder.search(post.ip_address).first.country%></td>
         <td><%= link_to 'Show', post_path(post),  class: "btn btn-secondary" %></td>
         <td><%= link_to 'Edit', edit_post_path(post), class: "btn btn-secondary" if post.user == current_user %></td>
         <td><%= link_to 'Comment', post_comments_path(post),  class: "btn btn-secondary" %></td>
-<!--        <td><%#= link_to 'New comment', new_post_comment_path(post),  class: "btn btn-secondary" %></td>-->
         <td><%= button_to 'Delete', post_path(post), method: :delete,  class: "btn btn-danger" if post.user == current_user %></td>
       </tr>
     <% end %>
