--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,13 @@
             <a class="navbar-brand "><%= link_to 'DisasteR Info', root_path %></a>
             <ul class="nav nav-pills">
               <li class="nav-item">
-                <%= link_to "Home", root_path, class: "btn btn-primary" %></li>
-                <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary" %>
-                <%= link_to "Login", new_user_session_path, class: "btn btn-primary" unless user_signed_in?  %></li>
-              <%= button_to "Log Out", destroy_user_session_path,  method: :delete, class: "btn btn-primary" if user_signed_in?%>
-             </li>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                  <%= link_to "Home", root_path, class: "btn btn-primary", class: "btn btn-primary me-md-2" %>
+                  <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary me-md-2" %>
+                  <%= link_to "Login", new_user_session_path, class: "btn btn-primary" unless user_signed_in?  %>
+                  <%= button_to "Log Out", destroy_user_session_path,  method: :delete, class: "btn btn-primary" if user_signed_in?%>
+                </div>
+              </li>
             </ul>
           </div>
         </nav>
