--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,6 @@
+<div class="d-grid d-md-flex justify-content-md-end">
+<%= link_to 'export', posts_path(format: :csv), class: 'btn btn-secondary ' %>
+</div>
 <div class="container ">
 <h1>Disaster Information</h1>
 </div>
