--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -24,6 +24,9 @@
     <%= form.label :address %>
     <%= form.text_field :address%>
   </div>
+  <div>
+    <%= form.file_field :image %>
+  </div>
 
   <%= form.submit %>
 <% end %>
