--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,7 @@
 <div class="container">
   <table class="table table-bordered table-info table-striped">
     <thead>
+    <th>Image</th>
     <th colspan="2">Uniquie Id</th>
     <th>Category</th>
     <th>Title</th>
@@ -22,6 +23,7 @@
     </thead>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= image_tag post.image.url, width: "100", height: "90" if post.image.present? %></td>
         <td><%= "hot" if @hot_posts == post.id %><%= image_tag ('hot-2.png'), width: "90", height: "70" if @hot_posts.include?(post)%></td>
         <td><p class=" m-3 d-flex justify-content-end align-content-end"><%= link_to "#{post.unique_num}", post.unique_num %></p></td>
         <td><%= post.categories.pluck(:name).join(',') %></td>
@@ -30,7 +32,7 @@
         <td><%= post.address %></td>
         <td><%= post.user.email %></td>
         <td><%= post.comments_count %></td>
-        <td><%= Geocoder.search(post.ip_address).first.country%></td>
+        <td><%= post.ip_address%></td>
         <td><%= link_to 'Show', post_path(post),  class: "btn btn-secondary" %></td>
         <td><%= link_to 'Edit', edit_post_path(post), class: "btn btn-secondary" if post.user == current_user %></td>
         <td><%= link_to 'Comment', post_comments_path(post),  class: "btn btn-secondary" %></td>
