--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,13 +30,17 @@
         <td><%= post.title %></td>
         <td><%= post.content %></td>
         <td><%= post.address %></td>
-        <td><%= post.user.email %></td>
+        <td data-controller="clipboard">
+          <span data-clipboard-target="email"><%= post.user.email %></span>
+          <button data-action="click->clipboard#copy">copy</button>
+        </td>
         <td><%= post.comments_count %></td>
         <td><%= post.ip_address%></td>
         <td><%= link_to 'Show', post_path(post),  class: "btn btn-secondary" %></td>
         <td><%= link_to 'Edit', edit_post_path(post), class: "btn btn-secondary" if post.user == current_user %></td>
         <td><%= link_to 'Comment', post_comments_path(post),  class: "btn btn-secondary" %></td>
         <td><%= button_to 'Delete', post_path(post), method: :delete,  class: "btn btn-danger" if post.user == current_user %></td>
+
       </tr>
     <% end %>
   </table>
